# explainable-credit-risk-models

./: .gitignore  README.md  pyproject.toml  ty.toml
data/: credit_example.csv  dataset.csv  loan_approval_data.csv
examples/: catboost-depth-example.ipynb  decision_tree.py  fastwoe-tree.ipynb  real_adaboost.py  tree_shap.py  woe-and-shap-experiments.ipynb  woe-sign-flips.ipynb  woe_density.py  woe_mackay.py  xgboost-leaf-weights.ipynb  xgboost-ohe.ipynb
