[project]
name = "explainable-credit-risk-models"
version = "0.1.0"
description = "Explainable Credit Risk Models"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.8",
    "fastwoe[faiss]>=0.1.3",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pygam>=0.10.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "xgboost>=3.0.5",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "jinja2>=3.1.6",
    "pyrefly>=0.34.0",
    "ruff>=0.13.2",
]


[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "C4", "UP", "SLF", "ARG", "D"]
ignore = [
    "E203",   # whitespace before ':'
    "E501",   # line too long
    "N806",   # Variable in function should be lowercase (allow X, y for ML)
    "N803",   # Argument name should be lowercase (allow X_train, y_train for ML)
    "UP035",  # typing.Dict and typing.List are still needed for Python 3.9 compatibility
    "F841",   # unused variable (equivalent to pylint W0612)
    "SLF001", # protected access (equivalent to pylint protected-access)
    "C901",   # too complex (common C013 equivalent)
    "ARG001", # unused function argument (equivalent to pylint unused-argument)
    "ARG002", # unused method argument (equivalent to pylint unused-argument)
    "ARG003", # unused class method argument (equivalent to pylint unused-argument)
    "ARG004", # unused static method argument (equivalent to pylint unused-argument)
    "ARG005", # unused lambda argument (equivalent to pylint unused-argument)
    "D100",   # missing docstring in public module
    "D101",   # missing docstring in public class
    "D102",   # missing docstring in public method
    "D103",   # missing docstring in public function
    "D104",   # missing docstring in public package
    "D105",   # missing docstring in magic method
    "D106",   # missing docstring in public nested class
    "D107",   # missing docstring in __init__
    "D200",   # short docstring should fit on one line
    "D205",   # blank line required between summary and description
    "D212",   # multi-line docstring summary should start at the first line
    "D400",   # first line should end with a period
    "D415",   # first line should end with punctuation
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D",      # ignore all docstring rules in tests
    "SLF001", # allow protected access in tests
    "ARG",    # allow unused arguments in test fixtures
    "N801",   # class name should use CapWords convention
    "N802",   # function name should be lowercase
]
"examples/*" = [
    "D",      # ignore docstring rules in examples
    "N803",   # argument name should be lowercase
    "N806",   # variable in function should be lowercase
    "C408",   # unnecessary collection call (dict() vs {})
]

[tool.ruff.lint.pydocstyle]
convention = "google"  # Use Google docstring convention

[tool.pylint.format]
max-line-length = 88

[tool.pylint.basic]
# Allow single letter variable names (common in ML: X, y)
good-names = ["i", "j", "k", "ex", "Run", "_", "X", "y"]

[tool.pyrefly]
# Project configuration
project_includes = ["examples"]
project_excludes = ["**/__pycache__", ".venv", "build", "dist", "tests"]
python_version = "3.11"

# Replace problematic imports with Any to avoid type checking errors
replace-imports-with-any = ["scipy.stats"]
